--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,13 +9,11 @@
     tools:showIn="@layout/activity_main"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvShow"
+    <FrameLayout
+        android:id="@+id/output_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="24sp"
-        android:text="Fragment data shows here..."/>
+        android:layout_weight="1" />
 
     <FrameLayout
         android:id="@+id/data_fragment_container"
